[workspace]
resolver = "2"
members = [
  "01-merge-strings-alternately",
  "02-greatest-common-divisor-of-strings",
  "03-kids-with-the-greatest-number-of-candies",
  "04-can-place-flowers",
  "05-reverse-vowels-of-a-string",
  "06-reverse-words-in-a-string",
  "07-product-of-array-except-self",
  "08-increasing-triplet-subsequence",
  "09-string-compression",
  "10-move-zeroes",
  "11-is-subsequence",
  "12-container-with-most-water",
  "13-max-number-of-k-sum-pairs",
  "14-maximum-average-subarray-i",
  "15-maximum-number-of-vowels-in-a-substring-of-given-length",
  "16-max-consecutive-ones-iii",
  "17-longest-subarray-of-1s-after-deleting-one-element",
  "18-find-the-highest-altitude",
  "19-find-pivot-index",
  "20-find-the-difference-of-two-arrays",
  "21-unique-number-of-occurrences",
  "22-determine-if-two-strings-are-close",
  "23-equal-row-and-column-pairs",
  "24-removing-stars-from-a-string",
  "25-asteroid-collision",
  "26-decode-string",
  "27-number-of-recent-calls",
  "28-dota2-senate",
  "29-delete-the-middle-node-of-a-linked-list",
  "30-odd-even-linked-list",
  "31-reverse-linked-list",
  "32-maximum-twin-sum-of-a-linked-list",
  "33-maximum-depth-of-binary-tree",
  "34-leaf-similar-trees",
  "35-count-good-nodes-in-binary-tree",
  "36-path-sum-iii",
  "37-longest-zigzag-path-in-a-binary-tree",
  "38-lowest-common-ancestor-of-a-binary-tree",
  "39-binary-tree-right-side-view",
  "40-maximum-level-sum-of-a-binary-tree",
  "41-search-in-a-binary-search-tree",
  "42-delete-node-in-a-bst",
  "43-keys-and-rooms",
  "44-number-of-provinces",
  "45-reorder-routes-to-make-all-paths-lead-to-the-city-zero",
  "46-evaluate-division",
  "47-nearest-exit-from-entrance-in-maze",
  "48-rotting-oranges",
  "49-kth-largest-element-in-an-array",
  "50-smallest-number-in-infinite-set",
  "51-maximum-subsequence-score",
  "52-total-cost-to-hire-k-workers",
  "53-guess-number-higher-or-lower",
  "54-successful-pairs-of-spells-and-potions",
  "55-find-peak-element",
  "56-koko-eating-bananas",
  "57-letter-combinations-of-a-phone-number",
  "58-combination-sum-iii",
  "59-n-th-tribonacci-number",
  "60-min-cost-climbing-stairs",
  "61-house-robber",
  "62-domino-and-tromino-tiling",
  "63-unique-paths",
  "64-longest-common-subsequence",
  "65-best-time-to-buy-and-sell-stock-with-transaction-fee",
  "66-edit-distance",
]
